ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-kuboard
    namespace: kube-system
    annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/enable-access-log: "true"
      nginx.ingress.kubernetes.io/configuration-snippet: |
        access_log /var/log/nginx/kuboard.access.log upstreaminfo if=$loggable;
        error_log  /var/log/nginx/kuboard.error.log;
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      nginx.ingress.kubernetes.io/whitelist-source-range: 172.27.106.0/24,172.26.105.0/24
      nginx.ingress.kubernetes.io/server-snippet: |
        location /test {
          return 404;
        }

spec:
  rules:
  - host: kuboard.com
    http:
      paths:
      - path:
        backend:
          serviceName: kuboard
          servicePort: 443
  tls:
  - hosts:
    - kuboard.com
    secretName: kuboard-secret
